new in index.html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,23 @@
    <title>Медиа-запросы</title>
  </head>
  <body>
-   <section class="section">
+    <header class="header">
+      <input class="header__checkbox" type="checkbox" id="checkbox">
+      <label class="header__label" for="checkbox">Меню</label>
+      <div class="burger first-line"></div>
+      <div class="burger second-line"></div>
+      <div class="burger third-line"></div>
+      <div class="burger fourth-line"></div>
+        
+      <nav class="header__menu">
+        <a href="#" class="header__menu__link">Главная</a>
+        <a href="#" class="header__menu__link">Новости</a>
+        <a href="#" class="header__menu__link">Контакты</a>
+        <a href="#" class="header__menu__link">Отзывы</a>
+      </nav>
+    </header>
+    <section class="section">
       <h1 class="section__title">Заголовок</h1>
-   </section>
+    </section>
  </body>
 </html>
